fix: add more spacing on the left of code block

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -182,7 +182,7 @@
   }
 
   .prose div[class*='language-'] code {
-    @apply block min-w-full w-fit text-sm px-6 py-0;
+    @apply block min-w-full w-fit text-sm pl-6 pr-12 py-0;
   }
 
   .prose div[class*='language-'] pre,
